// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/store/variants GET /store/variants /test-variant 1`] = `
Object {
  "variant": Object {
    "allow_backorder": false,
    "barcode": "test-barcode",
    "calculated_price": null,
    "calculated_price_incl_tax": null,
    "calculated_tax": null,
    "created_at": Any<String>,
    "deleted_at": null,
    "ean": "test-ean",
    "height": null,
    "hs_code": null,
    "id": "test-variant",
    "inventory_quantity": 10,
    "length": null,
    "manage_inventory": true,
    "material": null,
    "metadata": null,
    "mid_code": null,
    "options": Array [
      Object {
        "created_at": Any<String>,
        "deleted_at": null,
        "id": "test-variant-option",
        "metadata": null,
        "option_id": "test-option",
        "updated_at": Any<String>,
        "value": "Default variant",
        "variant_id": "test-variant",
      },
    ],
    "origin_country": null,
    "original_price": null,
    "original_price_incl_tax": null,
    "original_tax": null,
    "prices": Array [
      Object {
        "amount": 100,
        "created_at": Any<String>,
        "currency_code": "usd",
        "deleted_at": null,
        "id": "test-price",
        "max_quantity": null,
        "min_quantity": null,
        "price_list": null,
        "price_list_id": null,
        "region_id": null,
        "updated_at": Any<String>,
        "variant_id": "test-variant",
      },
    ],
    "product": Any<Object>,
    "product_id": "test-product",
    "sku": "test-sku",
    "tax_rates": null,
    "title": "Test variant",
    "upc": "test-upc",
    "updated_at": Any<String>,
    "variant_rank": 0,
    "weight": null,
    "width": null,
  },
}
`;

exports[`/store/variants GET /store/variants advanced pricing /test-variant with currency code 1`] = `
Object {
  "variant": Object {
    "allow_backorder": false,
    "barcode": "test-barcode",
    "calculated_price": 80,
    "calculated_price_incl_tax": null,
    "calculated_price_type": "sale",
    "calculated_tax": null,
    "created_at": Any<String>,
    "deleted_at": null,
    "ean": "test-ean",
    "height": null,
    "hs_code": null,
    "id": "test-variant",
    "inventory_quantity": 10,
    "length": null,
    "manage_inventory": true,
    "material": null,
    "metadata": null,
    "mid_code": null,
    "options": Array [
      Object {
        "created_at": Any<String>,
        "deleted_at": null,
        "id": "test-variant-option",
        "metadata": null,
        "option_id": "test-option",
        "updated_at": Any<String>,
        "value": "Default variant",
        "variant_id": "test-variant",
      },
    ],
    "origin_country": null,
    "original_price": 100,
    "original_price_incl_tax": null,
    "original_tax": null,
    "prices": Array [
      Object {
        "amount": 100,
        "created_at": Any<String>,
        "currency_code": "usd",
        "deleted_at": null,
        "id": "test-price",
        "max_quantity": null,
        "min_quantity": null,
        "price_list": null,
        "price_list_id": null,
        "region_id": null,
        "updated_at": Any<String>,
        "variant_id": "test-variant",
      },
      Object {
        "amount": 80,
        "created_at": Any<String>,
        "currency_code": "usd",
        "deleted_at": null,
        "id": "test-price-discount",
        "max_quantity": null,
        "min_quantity": null,
        "price_list": Object {
          "created_at": Any<String>,
          "deleted_at": null,
          "description": "Winter sale for VIP customers.",
          "ends_at": null,
          "id": "pl",
          "name": "VIP winter sale",
          "starts_at": null,
          "status": "active",
          "type": "sale",
          "updated_at": Any<String>,
        },
        "price_list_id": "pl",
        "region_id": null,
        "updated_at": Any<String>,
        "variant_id": "test-variant",
      },
    ],
    "product": Any<Object>,
    "product_id": "test-product",
    "sku": "test-sku",
    "tax_rates": null,
    "title": "Test variant",
    "upc": "test-upc",
    "updated_at": Any<String>,
    "variant_rank": 0,
    "weight": null,
    "width": null,
  },
}
`;

exports[`/store/variants GET /store/variants advanced pricing lists by title 1`] = `
Object {
  "variants": Array [
    Object {
      "allow_backorder": false,
      "barcode": null,
      "calculated_price": null,
      "calculated_price_incl_tax": null,
      "calculated_tax": null,
      "created_at": Any<String>,
      "deleted_at": null,
      "ean": null,
      "height": null,
      "hs_code": null,
      "id": Any<String>,
      "inventory_quantity": 12,
      "length": null,
      "manage_inventory": true,
      "material": null,
      "metadata": null,
      "mid_code": null,
      "options": Array [
        Object {
          "created_at": Any<String>,
          "deleted_at": null,
          "id": Any<String>,
          "metadata": null,
          "option_id": Any<String>,
          "updated_at": Any<String>,
          "value": "Practical",
          "variant_id": Any<String>,
        },
      ],
      "origin_country": null,
      "original_price": null,
      "original_price_incl_tax": null,
      "original_tax": null,
      "prices": Array [
        Object {
          "amount": 100,
          "created_at": Any<String>,
          "currency_code": "usd",
          "deleted_at": null,
          "id": Any<String>,
          "max_quantity": null,
          "min_quantity": null,
          "price_list": null,
          "price_list_id": null,
          "region_id": null,
          "updated_at": Any<String>,
          "variant_id": Any<String>,
        },
      ],
      "product": Any<Object>,
      "product_id": Any<String>,
      "sku": null,
      "tax_rates": null,
      "title": "test2",
      "upc": null,
      "updated_at": Any<String>,
      "variant_rank": 0,
      "weight": null,
      "width": null,
    },
  ],
}
`;

exports[`/store/variants GET /store/variants advanced pricing sets additional prices correctly when querying a variant 1`] = `
Object {
  "variant": Object {
    "allow_backorder": false,
    "barcode": "test-barcode",
    "calculated_price": 80,
    "calculated_price_incl_tax": 80,
    "calculated_price_type": "sale",
    "calculated_tax": 0,
    "created_at": Any<String>,
    "deleted_at": null,
    "ean": "test-ean",
    "height": null,
    "hs_code": null,
    "id": "test-variant",
    "inventory_quantity": 10,
    "length": null,
    "manage_inventory": true,
    "material": null,
    "metadata": null,
    "mid_code": null,
    "options": Array [
      Object {
        "created_at": Any<String>,
        "deleted_at": null,
        "id": "test-variant-option",
        "metadata": null,
        "option_id": "test-option",
        "updated_at": Any<String>,
        "value": "Default variant",
        "variant_id": "test-variant",
      },
    ],
    "origin_country": null,
    "original_price": 100,
    "original_price_incl_tax": 100,
    "original_tax": 0,
    "prices": Array [
      Object {
        "amount": 100,
        "created_at": Any<String>,
        "currency_code": "usd",
        "deleted_at": null,
        "id": "test-price",
        "max_quantity": null,
        "min_quantity": null,
        "price_list": null,
        "price_list_id": null,
        "region_id": null,
        "updated_at": Any<String>,
        "variant_id": "test-variant",
      },
      Object {
        "amount": 80,
        "created_at": Any<String>,
        "currency_code": "usd",
        "deleted_at": null,
        "id": "test-price-discount",
        "max_quantity": null,
        "min_quantity": null,
        "price_list": Object {
          "created_at": Any<String>,
          "deleted_at": null,
          "description": "Winter sale for VIP customers.",
          "ends_at": null,
          "id": "pl",
          "name": "VIP winter sale",
          "starts_at": null,
          "status": "active",
          "type": "sale",
          "updated_at": Any<String>,
        },
        "price_list_id": "pl",
        "region_id": null,
        "updated_at": Any<String>,
        "variant_id": "test-variant",
      },
    ],
    "product": Any<Object>,
    "product_id": "test-product",
    "sku": "test-sku",
    "tax_rates": Array [
      Object {
        "code": "default",
        "name": "default",
        "rate": 0,
      },
    ],
    "title": "Test variant",
    "upc": "test-upc",
    "updated_at": Any<String>,
    "variant_rank": 0,
    "weight": null,
    "width": null,
  },
}
`;

exports[`/store/variants GET /store/variants includes default relations 1`] = `
Object {
  "variants": Array [
    Object {
      "allow_backorder": false,
      "barcode": "test-barcode",
      "calculated_price": null,
      "calculated_price_incl_tax": null,
      "calculated_tax": null,
      "created_at": Any<String>,
      "deleted_at": null,
      "ean": "test-ean",
      "height": null,
      "hs_code": null,
      "id": "test-variant",
      "inventory_quantity": 10,
      "length": null,
      "manage_inventory": true,
      "material": null,
      "metadata": null,
      "mid_code": null,
      "options": Array [
        Object {
          "created_at": Any<String>,
          "deleted_at": null,
          "id": "test-variant-option",
          "metadata": null,
          "option_id": "test-option",
          "updated_at": Any<String>,
          "value": "Default variant",
          "variant_id": "test-variant",
        },
      ],
      "origin_country": null,
      "original_price": null,
      "original_price_incl_tax": null,
      "original_tax": null,
      "prices": Array [
        Object {
          "amount": 100,
          "created_at": Any<String>,
          "currency_code": "usd",
          "deleted_at": null,
          "id": "test-price",
          "max_quantity": null,
          "min_quantity": null,
          "price_list": null,
          "price_list_id": null,
          "region_id": null,
          "updated_at": Any<String>,
          "variant_id": "test-variant",
        },
      ],
      "product": Any<Object>,
      "product_id": "test-product",
      "sku": "test-sku",
      "tax_rates": null,
      "title": "Test variant",
      "upc": "test-upc",
      "updated_at": Any<String>,
      "variant_rank": 0,
      "weight": null,
      "width": null,
    },
  ],
}
`;
